@@ -1,6 +1,6 @@
 ;;; hatty.el --- Query positions through hats        -*- lexical-binding: t; -*-
 
-;; Copyright (C) 2024 Erik Präntare
+;; Copyright (C) 2024, 2025 Erik Präntare
 
 ;; Author: Erik Präntare
 ;; Keywords: convenience
@@ -145,7 +145,8 @@ create all combinations from ‘hatty-colors’ and ‘hatty-shapes’")
   character
   color
   shape
-  token-region)
+  token-region
+  (on-final-visual-line t))
 
 (defvar-local hatty--hats '()
   "All hats located in the current buffer.")
@@ -155,7 +156,7 @@ create all combinations from ‘hatty-colors’ and ‘hatty-shapes’")
 This function is equivalent to ‘downcase’."
   (downcase character))
 
-(cl-defun hatty--locate-hat (character &optional color shape)
+(defun hatty--locate-hat (character &optional color shape)
   "Get  the hat over CHARACTER matching COLOR and SHAPE."
   (setq color (or color 'default))
   (setq shape (or shape 'default))
@@ -165,7 +166,7 @@ This function is equivalent to ‘downcase’."
                                (eq shape (hatty--hat-shape hat))))
             hatty--hats))
 
-(cl-defun hatty-locate (character &optional color shape)
+(defun hatty-locate (character &optional color shape)
   "Get position of the hat over CHARACTER matching COLOR and SHAPE.
 
 COLOR and SHAPE should be identifiers as they occur in
@@ -176,7 +177,7 @@ shape will be used."
   (hatty--hat-marker
    (hatty--locate-hat character color shape)))
 
-(cl-defun hatty-locate-token-region (character &optional color shape)
+(defun hatty-locate-token-region (character &optional color shape)
   "Get token region of the hat over CHARACTER with COLOR and SHAPE.
 
 COLOR and SHAPE should be identifiers as they occur in
@@ -303,8 +304,8 @@ Order tokens by importance."
                      tokens))))
 
 (defun hatty--create-hats ()
-  "Create hats in the buffer given by ‘window-buffer’.
-Return the created hats.
+  "Create hats in the buffer given by `window-buffer'.
+Set `hatty--hats' to the created hats and return them.
 
 Tokens are queried from `hatty--get-tokens'"
   (hatty--reset-styles)
@@ -313,7 +314,45 @@ Tokens are queried from `hatty--get-tokens'"
           (let ((tokens (hatty--get-tokens)))
             (seq-filter
              #'identity
-             (seq-map #'hatty--create-hat tokens))))))
+             (seq-map #'hatty--create-hat tokens)))))
+
+  ;; To determine whether a hat is on the last visual line of the
+  ;; logical line, we want to do it in one pass for all hats to
+  ;; minimize the amount of visual line movements performed.  This is
+  ;; because visual line movements functions are slow, but needed to
+  ;; determine whether we are on the last visual line.  We need to
+  ;; determine this to correctly determine the line height of the
+  ;; visual line later (in hatty--draw-svg-hat).
+  (setq hatty--hats
+        (seq-sort (lambda (h1 h2) (< (hatty--hat-marker h1) (hatty--hat-marker h2)))
+                  hatty--hats))
+  (unless truncate-lines
+    (save-excursion
+      (goto-char (window-start))
+      (end-of-visual-line)
+      (let ((on-final-visual-line
+             (save-excursion
+               (= (point)
+                  (progn (end-of-line) (point)))))
+            (worklist hatty--hats))
+        (while worklist
+          (let ((current-hat (car worklist)))
+            (if (< (hatty--hat-marker current-hat) (point))
+                (progn
+                  (setf (hatty--hat-on-final-visual-line current-hat)
+                        on-final-visual-line)
+                  (pop worklist))
+              ;; When on the final visual line, end-of-visual-line does
+              ;; not progress to the next line.  We must manually move
+              ;; to it.
+              (when on-final-visual-line (forward-char))
+              (end-of-visual-line)
+              (setq on-final-visual-line
+                    (save-excursion
+                      (= (point)
+                         (progn (end-of-line) (point)))))))))))
+
+  hatty--hats)
 
 (defun hatty--get-raise-display-property (position)
   "Get value of the `raise' display property at POSITION.
@@ -329,15 +368,6 @@ properties."
            (if property (cadr property) 0.0)))
         (_ 0.0)))))
 
-(defun hatty--on-final-line-wrap (position)
-  "Return t if POSITION is at the last visual line of current line.
-
-If lines are long, they may visually wrap.  This function checks
-if POSITION lies on the last wrapping of the current line."
-  (save-excursion
-    (goto-char position)
-    (end-of-visual-line)
-    (= (point) (progn (end-of-line) (point)))))
 
 (defun hatty--draw-svg-hat (hat)
   "Overlay character of HAT with with image of it having the hat."
@@ -381,7 +411,7 @@ if POSITION lies on the last wrapping of the current line."
           (cond
            ;; Lines that are wrapped do not profit of the additional
            ;; line height of the final newline
-           ((not (hatty--on-final-line-wrap position)) default-char-height)
+           ((not (hatty--hat-on-final-visual-line hat)) default-char-height)
            ((integerp line-height) (max default-char-height line-height))
            ((floatp line-height) (* default-char-height line-height))
            (t default-char-height)))
